--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   main:
     banner-mode: off
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/airticket
+    username: root
+    password: 49vobollo1403V
+
