Added new fields to the Trips class and removed the distance field. I added new fields in the database and changed the png file. I created a database in the database and filled the fields to them

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,10 @@ spring:
     username: root
     password: 49vobollo1403V
 
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+
+  liquibase:
+      change-log: classpath:db/changelog/charges/v0.0.1-SNAPSHOT/v0.0.1-master.xml
