Changes in the yaml file

--- a/src/main/resources/db/changelog/charges/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
+++ b/src/main/resources/db/changelog/charges/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
@@ -32,6 +32,11 @@ databaseChangeLog:
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
+              - column:
+                  name: flight_time
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
   - changeSet:
       id: create-passenger-table
       author: RuslanVahner
