--- a/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
+++ b/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
@@ -34,7 +34,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: flight_time
-                  type: VARCHAR(20)
+                  type: TIME
                   constraints:
                     nullable: false
   - changeSet:
