--- a/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
+++ b/src/main/resources/db/changelog/changes/v0.0.1-SNAPSHOT/create-tables-changelog.yaml
@@ -1,43 +1,5 @@
 databaseChangeLog:
   - changeSet:
-      id: create-trips-table
-      author: RuslanVahner
-      changes:
-        - createTable:
-            tableName: Trips
-            columns:
-              - column:
-                  name: id
-                  type: BINARY(16)
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: name_trips
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: flight_number
-                  type: INT
-                  constraints:
-                    nullable: false
-              - column:
-                  name: departure_time
-                  type: TIMESTAMP
-                  constraints:
-                    nullable: false
-              - column:
-                  name: arrival_time
-                  type: TIMESTAMP
-                  constraints:
-                    nullable: false
-              - column:
-                  name: flight_time
-                  type: TIME
-                  constraints:
-                    nullable: false
-  - changeSet:
       id: create-passenger-table
       author: RuslanVahner
       changes:
@@ -75,6 +37,121 @@ databaseChangeLog:
                   type: VARCHAR(60)
                   constraints:
                     nullable: true
+
+  - changeSet:
+      id: create-airline-table
+      author: RuslanVahner
+      changes:
+        - createTable:
+            tableName: Airline
+            columns:
+              - column:
+                  name: id
+                  type: BINARY(16)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: airline_name
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: airline_price
+                  type: DECIMAL
+                  constraints:
+                    nullable: false
+
+  - changeSet:
+      id: create-airport-table
+      author: RuslanVahner
+      changes:
+        - createTable:
+            tableName: Airport
+            columns:
+              - column:
+                  name: id
+                  type: BINARY(16)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: name_airport
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: country
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: address
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: airline_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_airport_airline
+                    referencedTableName: Airline
+                    referencedColumnNames: id
+                    nullable: false
+              - column:
+                  name: ticket_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_airport_ticket
+                    referencedTableName: Ticket
+                    referencedColumnNames: id
+
+  - changeSet:
+      id: create-trips-table
+      author: RuslanVahner
+      changes:
+        - createTable:
+            tableName: Trips
+            columns:
+              - column:
+                  name: id
+                  type: BINARY(16)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: name_trips
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: flight_number
+                  type: INT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: departure_time
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: arrival_time
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: flight_time
+                  type: TIME
+                  constraints:
+                    nullable: false
+              - column:
+                  name: airline_id
+                  type: BINARY(16)
+                  constraints:
+                    foreignKeyName: fk_trips_airline
+                    referencedTableName: Airline
+                    referencedColumnNames: id
+
   - changeSet:
       id: create-cart-table
       author: RuslanVahner
@@ -102,7 +179,11 @@ databaseChangeLog:
                   name: owner_id
                   type: BINARY(16)
                   constraints:
+                    foreignKeyName: fk_cart_passenger
+                    referencedTableName: Passenger
+                    referencedColumnNames: id
                     nullable: false
+
   - changeSet:
       id: create-account-table
       author: RuslanVahner
@@ -147,6 +228,7 @@ databaseChangeLog:
                     referencedTableName: Passenger
                     referencedColumnNames: id
                     nullable: false
+
   - changeSet:
       id: create-ticket-table
       author: RuslanVahner
@@ -187,6 +269,7 @@ databaseChangeLog:
                     foreignKeyName: fk_ticket_account
                     referencedTableName: Account
                     referencedColumnNames: id
+                    nullable: false
               - column:
                   name: service
                   type: ENUM('Economy', 'Business', 'First')
@@ -197,70 +280,25 @@ databaseChangeLog:
                   type: ENUM('Adult', 'Child')
                   constraints:
                     nullable: false
-  - changeSet:
-      id: create-airline-table
-      author: RuslanVahner
-      changes:
-        - createTable:
-            tableName: Airline
-            columns:
               - column:
-                  name: id
+                  name: airport_id
                   type: BINARY(16)
                   constraints:
-                    primaryKey: true
+                    foreignKeyName: fk_ticket_airport
+                    referencedTableName: Airport
+                    referencedColumnNames: id
                     nullable: false
               - column:
-                  name: airline_name
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: airline_price
-                  type: DECIMAL
-                  constraints:
-                    nullable: false
-              - column:
-                  name: trips_id
+                  name: trip_id
                   type: BINARY(16)
                   constraints:
-                    foreignKeyName: fk_airline_trips
+                    foreignKeyName: fk_ticket_trip
                     referencedTableName: Trips
                     referencedColumnNames: id
-                    nullable: false
-  - changeSet:
-      id: create-airport-table
-      author: RuslanVahner
-      changes:
-        - createTable:
-            tableName: Airport
-            columns:
               - column:
-                  name: id
+                  name: cart_id
                   type: BINARY(16)
                   constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: name_airport
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: country
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: address
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: airline_id
-                  type: BINARY(16)
-                  constraints:
-                    foreignKeyName: fk_airport_airline
-                    referencedTableName: Airline
+                    foreignKeyName: fk_ticket_cart
+                    referencedTableName: Cart
                     referencedColumnNames: id
-                    nullable: false
