--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,13 @@ spring:
     url: jdbc:mysql://localhost:3306/airticket
     username: root
     password: 49vobollo1403V
-
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
 
   liquibase:
-      change-log: classpath:/db/changelog/changes/v0.0.1-SNAPSHOT/v0.0.1-master.xml
+    change-log: classpath:/db/changelog/changes/v0.0.1-SNAPSHOT/v0.0.1-master.xml
